Add complete backend API with SQLite database
- Database setup with SQLite and schema initialization
- Complete CRUD operations for ideas
- Search and filtering functionality
- Tag and category management
- TypeScript types and interfaces
- Proper error handling and validation
- Updated .gitignore files for both root and backend
- Tested API endpoints working correctly

API Endpoints:
- GET /api/ideas - Get all ideas with filtering
- GET /api/ideas/:id - Get specific idea
- POST /api/ideas - Create new idea
- PUT /api/ideas/:id - Update idea
- DELETE /api/ideas/:id - Delete idea
- GET /api/ideas/search - Search ideas
- GET /api/categories - Get all categories
- GET /api/tags - Get all tags

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "cors": "latest",
-    "express": "latest"
+    "express": "latest",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/cors": "latest",
