--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ dist/
 
 # Environment variables
 .env
+.env.local
+.env.production
 
 # Frontend
 frontend/node_modules/
@@ -15,5 +17,37 @@ frontend/dist/
 backend/node_modules/
 backend/dist/
 
+# Database files
+backend/data/
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
+
+# Temporary files
+tmp/
+temp/
