feat: implement AI-powered related ideas engine with OpenAI embeddings
- Add embedding service with OpenAI integration
- Create embeddings table for semantic search
- Implement cosine similarity calculation
- Add related ideas API endpoint
- Create RelatedIdeas React component
- Update IdeaDetail page with related ideas section
- Add environment configuration for OpenAI API
- Test and verify 68% similarity between related ideas
- Update README with complete feature documentation

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
     "cors": "latest",
+    "dotenv": "^17.2.0",
     "express": "latest",
+    "openai": "^4.28.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
