--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +24,12 @@
   "devDependencies": {
     "@types/cors": "latest",
     "@types/express": "latest",
+    "@types/jest": "^29.5.0",
     "@types/node": "latest",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "latest",
     "typescript": "latest"
   }
