--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.116.1
 uvicorn==0.35.0
-sqlalchemy==2.0.41
+sqlalchemy>=2.0.41
 python-multipart==0.0.20
 python-dotenv==1.1.1
 openai==1.97.1
