--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,4 +8,6 @@ pydantic==2.11.7
 pytest==8.2.2
 pytest-asyncio==0.24.0
 httpx==0.28.1
-psutil==6.1.0 
+psutil==6.1.0
+numpy==1.24.3
+requests==2.31.0 
